configuração de acesso

--- a/src/main/resources/static/js/operadores/novo-operador.html
+++ b/src/main/resources/static/js/operadores/novo-operador.html
@@ -42,8 +42,9 @@
         <hr/>
 
         <div class="text-center bold-17">
-            <p>{{cadastrado.nome}}</p>
-            <p>{{cadastrado.perfil}}</p>
+            <p>{{operador.nome}}</p>
+            <p>{{operador.perfil}}</p>
+            <p>Senha para login: 12345</p>
         </div>
 
     </div>
